--- a/speed-dating/src/app/util/errorbar/errorbar.component.css
+++ b/speed-dating/src/app/util/errorbar/errorbar.component.css
@@ -1,11 +1,6 @@
-*{
-  padding: 0;
-  margin:0;
-  box-sizing: border-box;
-}
-
-.errorBarContainer{
-  box-shadow: inset rgba(0, 0, 0, 0.19) 0px 10px 20px, inset rgba(0, 0, 0, 0.23) 0px 6px 6px;
+.errorBarContainer {
+  box-shadow: inset rgba(0, 0, 0, 0.19) 0px 10px 20px,
+    inset rgba(0, 0, 0, 0.23) 0px 6px 6px;
   background-color: rgba(30, 225, 16, 0.78);
   height: 0rem;
   display: flex;
@@ -15,12 +10,14 @@
   filter: brightness(0%);
   overflow: clip;
 }
-.open{
+
+.open {
   filter: brightness(100%);
-  height:2rem;
+  height: 2rem;
 }
-#errorMessage{
-  color:white;
+
+#errorMessage {
+  color: white;
   font-size: medium;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
